			SWI-Prolog ChangeLog
			====================

					--------------------------------------
					NOTE: Bug #<N> refers to bugs reported
					to the SWI-Prolog Bugzilla system at
					http://gollem.science.uva.nl/bugzilla/
					--------------------------------------

  * ADDED: library('clp/simplex') for solving linear programming problems.
    Contributed by Markus Triska.

  * FIXED: floor and ceil using rational numbers.  Markus Triska.

==================================
VERSION 5.5.38 (November 18, 2005)
==================================

  * FIXED: Add support for attributed variables in unify_with_occurs_check/2.
    Tom Schrijvers.

  * PORT: Added many patches for updated support for the Cygwin environment.
    Contributed by Corinna Vinschen, Redhat.  Work in progress.

  * FIXED: Possible crash in meta-calling large terms.  Matt Lilley.

  * FIXED: avoid loosing the next input character after abort.

  * FIXED: memory leak and off-by-one buffer overflow reading from the
    console through GNU readline.

  * ADDED: Ssetenc() to negotiate manipulation of stream encoding.  Used
    to protect encoding on plwin.exe as well as pce_open/3 for anything
    but socket-related streams.

  * FIXED: Bug#118: interaction numbervars and ignore_ops options in
    write_term.  Bart Demoen.


==================================
VERSION 5.5.37 (November 12, 2005)
==================================

  * FIXED: Memory leak in arithmetic combining GMP numbers with floats.
    Dmitry.

  * FIXED: plld: schedule .a files with the libraries.  Roberto Bagnara.

  * FIXED: Bug#116: shell/0 on Windows.  Dmitry.

  * FIXED: QLF and saved-state handling of big clauses (>65000 VM
    codes).  Matt Lilley.

  * ADDED: functions lsb/1 and popcount/1 to improve support for handling
    GMP numbers as bitvectors.  Enhanced clp_distinct.pl to use these
    functions.  Suggested by Markus Triska.

  * ADDED: library(clp/clp_distinct.pl).  Contributed by  Markus Triska.
