@@ -74,6 +74,10 @@ SWI-Prolog package home</a>.
     <td>Installed
     <td>Storing, querying and managment of RDF triple sets
 
+<tr><th><a href="nlp.html">NLP</a>
+    <td>Installed
+    <td>NLP basics: Porter stem, Double Metaphone
+
 <tr><th><a href="http.html">http</a>
     <td>Installed
     <td>HTTP client and server libraries
